# pawr-experiments-combined

./: .gitignore  Kconfig  README.md
advertiser/: CMakeLists.txt  Kconfig  prj.conf
advertiser/.cache/clangd/index/: main.c.1035EDD9BA936529.idx
advertiser/src/: advertiser_fsm.c  advertiser_fsm.h  free_list.c  free_list.h  main.c
crypto_flasher/: .gitignore  CMakeLists.txt  Kconfig  prj.conf
crypto_flasher/src/: main.c
include/app/lib/: common.h  crypto.h  data_generator.h  interactive.h  transfer.h
lib/: CMakeLists.txt  Kconfig
lib/crypto/: CMakeLists.txt  crypto.c
lib/data_generator/: CMakeLists.txt  Kconfig  data_generator.c
lib/interactive/: CMakeLists.txt  Kconfig  interactive.c
lib/transfer/: CMakeLists.txt  transfer.c
scanner/: CMakeLists.txt  Kconfig  prj.conf
scanner/.cache/clangd/index/: main.c.84872F799D3F857A.idx  main.c.C0853ED1BAD120C8.idx
scanner/src/: main.c  scanner_fsm.c  scanner_fsm.h
scripts/: export_compile_commands.py  export_compile_commands.sh  key_mgr.py  west-commands.yml
